reverted multi-byte vendor attribute (commented); fixed support for int1/2/4/8; disabled shared secret validation and udp answer, for performance